lustre/osd-ldiskfs/osd_handler.c
@@ -951,11 +951,9 @@ int osd_trans_start(const struct lu_env *env, struct dt_device *d,
 		      LDISKFS_SB(osd_sb(dev))->s_es->s_volume_name,
 		      oh->ot_credits,
 		      osd_journal(dev)->j_max_transaction_buffers);
-		CWARN("  create: %u/%u, delete: %u/%u, destroy: %u/%u\n",
+		CWARN("  create: %u/%u, destroy: %u/%u\n",
 		      oti->oti_declare_ops[OSD_OT_CREATE],
 		      oti->oti_declare_ops_cred[OSD_OT_CREATE],
-		      oti->oti_declare_ops[OSD_OT_DELETE],
-		      oti->oti_declare_ops_cred[OSD_OT_DELETE],
 		      oti->oti_declare_ops[OSD_OT_DESTROY],
 		      oti->oti_declare_ops_cred[OSD_OT_DESTROY]);
 		CWARN("  attr_set: %u/%u, xattr_set: %u/%u\n",
@@ -973,8 +971,8 @@ int osd_trans_start(const struct lu_env *env, struct dt_device *d,
 		CWARN("  insert: %u/%u, delete: %u/%u\n",
 		      oti->oti_declare_ops[OSD_OT_INSERT],
 		      oti->oti_declare_ops_cred[OSD_OT_INSERT],
-		      oti->oti_declare_ops[OSD_OT_DESTROY],
-		      oti->oti_declare_ops_cred[OSD_OT_DESTROY]);
+		      oti->oti_declare_ops[OSD_OT_DELETE],
+		      oti->oti_declare_ops_cred[OSD_OT_DELETE]);
 		CWARN("  ref_add: %u/%u, ref_del: %u/%u\n",
 		      oti->oti_declare_ops[OSD_OT_REF_ADD],
 		      oti->oti_declare_ops_cred[OSD_OT_REF_ADD],
@@ -1358,55 +1356,57 @@ static int osd_init_capa_ctxt(const struct lu_env *env, struct dt_device *d,
  * If we mount with --data_journal we may need more.
  */
 const int osd_dto_credits_noquota[DTO_NR] = {
-        /**
-         * Insert/Delete.
-         * INDEX_EXTRA_TRANS_BLOCKS(8) +
-         * SINGLEDATA_TRANS_BLOCKS(8)
-         * XXX Note: maybe iam need more, since iam have more level than
-         *           EXT3 htree.
-         */
-        [DTO_INDEX_INSERT]  = 16,
-        [DTO_INDEX_DELETE]  = 16,
-        /**
+	/**
+	 * Insert.
+	 * INDEX_EXTRA_TRANS_BLOCKS(8) +
+	 * SINGLEDATA_TRANS_BLOCKS(8)
+	 * XXX Note: maybe iam need more, since iam have more level than
+	 *           EXT3 htree.
+	 */
+	[DTO_INDEX_INSERT]  = 16,
+	/**
+	 * Delete
+	 * just modify a single entry, probably merge few within a block
+	 */
+	[DTO_INDEX_DELETE]  = 1,
+	/**
 	 * Used for OI scrub
-         */
-        [DTO_INDEX_UPDATE]  = 16,
-        /**
-         * Create a object. The same as create object in EXT3.
-         * DATA_TRANS_BLOCKS(14) +
-         * INDEX_EXTRA_BLOCKS(8) +
-         * 3(inode bits, groups, GDT)
-         */
-        [DTO_OBJECT_CREATE] = 25,
-        /**
-         * XXX: real credits to be fixed
-         */
-        [DTO_OBJECT_DELETE] = 25,
-        /**
-         * Attr set credits (inode)
-         */
-        [DTO_ATTR_SET_BASE] = 1,
-        /**
-         * Xattr set. The same as xattr of EXT3.
-         * DATA_TRANS_BLOCKS(14)
-         * XXX Note: in original MDS implmentation INDEX_EXTRA_TRANS_BLOCKS
-         * are also counted in. Do not know why?
-         */
-        [DTO_XATTR_SET]     = 14,
-        [DTO_LOG_REC]       = 14,
-        /**
-         * credits for inode change during write.
-         */
-        [DTO_WRITE_BASE]    = 3,
-        /**
-         * credits for single block write.
-         */
-        [DTO_WRITE_BLOCK]   = 14,
-        /**
-         * Attr set credits for chown.
-         * This is extra credits for setattr, and it is null without quota
-         */
-        [DTO_ATTR_SET_CHOWN]= 0
+	 */
+	[DTO_INDEX_UPDATE]  = 16,
+	/**
+	 * 4(inode, inode bits, groups, GDT)
+	 *   notice: OI updates are counted separately with DTO_INDEX_INSERT
+	 */
+	[DTO_OBJECT_CREATE] = 4,
+	/**
+	 * 4(inode, inode bits, groups, GDT)
+	 *   notice: OI updates are counted separately with DTO_INDEX_DELETE
+	 */
+	[DTO_OBJECT_DELETE] = 4,
+	/**
+	 * Attr set credits (inode)
+	 */
+	[DTO_ATTR_SET_BASE] = 1,
+	/**
+	 * Xattr set. The same as xattr of EXT3.
+	 * DATA_TRANS_BLOCKS(14)
+	 * XXX Note: in original MDS implmentation INDEX_EXTRA_TRANS_BLOCKS
+	 * are also counted in. Do not know why?
+	 */
+	[DTO_XATTR_SET]     = 14,
+	/**
+	 * credits for inode change during write.
+	 */
+	[DTO_WRITE_BASE]    = 3,
+	/**
+	 * credits for single block write.
+	 */
+	[DTO_WRITE_BLOCK]   = 14,
+	/**
+	 * Attr set credits for chown.
+	 * This is extra credits for setattr, and it is null without quota
+	 */
+	[DTO_ATTR_SET_CHOWN] = 0
 };
 
 static const struct dt_device_operations osd_dt_ops = {
@@ -2278,12 +2278,10 @@ static int osd_declare_object_create(const struct lu_env *env,
 
 	osd_trans_declare_op(env, oh, OSD_OT_CREATE,
 			     osd_dto_credits_noquota[DTO_OBJECT_CREATE]);
-	if (!fid_is_on_ost(osd_oti_get(env), osd_dt_dev(handle->th_dev),
-			   lu_object_fid(&dt->do_lu), OI_CHECK_FLD))
-		/* Reuse idle OI block may cause additional one OI block
-		 * to be changed. */
-		osd_trans_declare_op(env, oh, OSD_OT_INSERT,
-				osd_dto_credits_noquota[DTO_INDEX_INSERT] + 1);
+	/* Reuse idle OI block may cause additional one OI block
+	 * to be changed. */
+	osd_trans_declare_op(env, oh, OSD_OT_INSERT,
+			     osd_dto_credits_noquota[DTO_INDEX_INSERT] + 1);
 
 	/* If this is directory, then we expect . and .. to be inserted as
 	 * well. The one directory block always needs to be created for the
@@ -2858,16 +2856,32 @@ static int osd_declare_xattr_set(const struct lu_env *env,
                                  int fl, struct thandle *handle)
 {
 	struct osd_thandle *oh;
+	int credits;
 
 	LASSERT(handle != NULL);
 
 	oh = container_of0(handle, struct osd_thandle, ot_super);
 	LASSERT(oh->ot_handle == NULL);
 
-	osd_trans_declare_op(env, oh, OSD_OT_XATTR_SET,
-			     strcmp(name, XATTR_NAME_VERSION) == 0 ?
-			     osd_dto_credits_noquota[DTO_ATTR_SET_BASE] :
-			     osd_dto_credits_noquota[DTO_XATTR_SET]);
+	/* optimistic optimization: LMA is set first and usually fit inode */
+	if (strcmp(name, XATTR_NAME_LMA) == 0) {
+		if (dt_object_exists(dt))
+			credits = 0;
+		else
+			credits = 1;
+	} else if (strcmp(name, XATTR_NAME_VERSION) == 0) {
+		credits = 1;
+	} else {
+		struct osd_device  *osd = osd_dev(dt->do_lu.lo_dev);
+		struct super_block *sb = osd_sb(osd);
+		credits = osd_dto_credits_noquota[DTO_XATTR_SET];
+		if (buf && buf->lb_len > sb->s_blocksize) {
+			credits *= (buf->lb_len + sb->s_blocksize - 1) >>
+					sb->s_blocksize_bits;
+		}
+	}
+
+	osd_trans_declare_op(env, oh, OSD_OT_XATTR_SET, credits);
 
 	return 0;
 }
