lustre/osd-ldiskfs/osd_internal.h
@@ -346,7 +346,6 @@ enum dt_txn_op {
         DTO_OBJECT_DELETE,
         DTO_ATTR_SET_BASE,
         DTO_XATTR_SET,
-        DTO_LOG_REC, /**< XXX temporary: dt layer knows nothing about llog. */
         DTO_WRITE_BASE,
         DTO_WRITE_BLOCK,
         DTO_ATTR_SET_CHOWN,
